# geometrics

./: .gitignore  README.md  pyproject.toml
camera/: camera.py
docs/source/: conf.py  geometrics.camera.rst  geometrics.interpolation.rst  geometrics.pointcloud.rst  geometrics.pose.rst  geometrics.rst  geometrics.transforms.rst  geometrics.types.rst  index.rst  modules.rst
geometrics/camera/: projection.py
geometrics/interpolation/: __init__.py  pose_interpolation.py  se3_interpolation.py
geometrics/math_utils/: basic.py
geometrics/pointcloud/: processing.py
geometrics/pose/: pose_utils.py
geometrics/transforms/: rigid.py
geometrics/types/: geometric_types.py
interpolation/: pose_interpolation.py
pointcloud/: processing.py
pose/: pose.py
tests/: test_camera_projection.py
transforms/: rigid.py
