[project]
name = "geometrics"
version = "0.2.0"
description = "Utility package for geometry processing."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "None"}
dependencies = [
  "numpy",
  "mink>=0.0.10",
]
authors = [
  { name="Neil Nie", email="neil@vernerobotics.com" }
]

[project.urls]
"Homepage" = "https://github.com/verne-labs-ai/geometrics"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
